[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.157", features = ["derive"] }
clap = { version = "4.3.19", features = ["derive", "string", "wrap_help"] }
serde_yaml = "0.9.19"
anyhow = { version = "1.0.86", features = ["backtrace"] }
shellexpand = "3.1.0"
shlex = "1.3.0"
serde_json = "1.0.120"
rand = "0.8.5"
ctrlc = "3.4.4"
libc = "0.2.155"

# Build with `cargo build --profile release-small`
[profile.release-small] # A profile to try to minimize the size
inherits = "release"
panic = "abort" # Abort on Panic
strip = true
opt-level = "z" # Optimize For Size
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# Build with `cargo build --profile release-small-with-debug`
[profile.release-small-with-debug]
inherits = "release-small"
strip = false
debug = true
